# homework

week1/task2/src/: task2.cpp
week12/task1/include/: prime_calculator.hpp
week12/task1/src/: config.cfg  main.cpp
week12/task2/src/: password_cracker.cpp
week13/: Dockerfile
week13/task1/: CMakeLists.txt
week13/task1/src/: prime_calculator.cpp
week13/task2/: CMakeLists.txt  Makefile
week13/task2/include/: password_cracker.hpp
week13/task2/src/: main.cpp
week14/client/: CMakeLists.txt  Makefile
week14/client/src/: client.cpp
week14/server/: CMakeLists.txt  Makefile
week14/server/include/: server.hpp
week14/server/src/: server.cpp  server_func.cpp
week15/: build.sh  worker.sh
week15/master/: CMakeLists.txt  Makefile
week15/master/src/: master.cpp
week15/worker/: CMakeLists.txt  comp.sh
week15/worker/src/: worker.cpp
week2/task1/task1.1/: Makefile
week2/task1/task1.1/include/: User.hpp
week2/task1/task1.1/src/: User.cpp  main.cpp
week2/task1/task1.2/include/: Octagon.hpp
week2/task1/task1.2/src/: main.cpp
week2/task1_1/src/: task1_1.cpp
week2/task1_2/src/: task1_2.cpp
week2/task2/task2.1/: Makefile
week2/task2/task2.1/include/: Student.hpp
week2/task2/task2.1/src/: Student.cpp  main.cpp
week2/task2/task2.2/: Makefile
week2/task2/task2.2/include/: BankAccount.hpp
week2/task2/task2.2/src/: BankAccount.cpp  main.cpp
week2/task2_1/src/: task2_1.cpp
week2/task2_2/src/: task2_2.cpp
week2/task3/task3.1/: Makefile
week2/task3_1/src/: task3_1.cpp
week2/task3_2/src/: task3_2.cpp
week4/task1/taskA/: Makefile  run.sh
week4/task1/taskB/: Makefile
week4/task2/taskA/: Makefile
week4/task2/taskB/: Makefile
week5/task1/task1_A/: run.sh
week5/task1/task1_B/: run.sh
week5/task1/task1_C/: run.sh
week7/task3/include/: searchFiles.hpp
week7/task3/src/: main.cpp  searchFiles.cpp
week8/: CMakeLists.txt
week8/src/: fibonacci.cpp
week9/: CMakeLists.txt
(+17 files in other folders)
